# Object-oriented-lab-sudoku

./: .gitignore  CMakeLists.txt  README.md  test.cpp
include/: grid.h  sudoku.h
python/: grid.py  result.txt  sudoku.py  test.py
src/: grid.cpp  sudoku.cpp
test/: result.txt  test.cpp
